--- a/lib-q-hash/Cargo.toml
+++ b/lib-q-hash/Cargo.toml
@@ -18,6 +18,7 @@ digest = "0.11.0-rc.0"
 lib-q-keccak = { version = "0.0.1", path = "../lib-q-keccak" }
 lib-q-k12 = { version = "0.0.1", path = "../lib-q-k12" }
 lib-q-sha3 = { version = "0.0.1", path = "../lib-q-sha3" }
+rayon = { version = "1.11.0", optional = true }
 
 [dev-dependencies]
 digest = { version = "0.11.0-rc.0", features = ["dev"] }
@@ -34,10 +35,12 @@ simd = ["lib-q-keccak/simd"] # Enable SIMD optimizations
 nightly = ["lib-q-keccak/nightly"] # Enable nightly Rust features
 advanced-simd = ["lib-q-keccak/advanced-simd"] # Enable advanced SIMD features
 multithreading = ["lib-q-keccak/multithreading"] # Enable multi-threading support
+parallelhash = ["rayon"] # Enable parallel processing for ParallelHash
 
 [lib]
 name = "lib_q_hash"
 path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]
 
 [package.metadata.docs.rs]
 all-features = true
