--- a/lib-q-utils/Cargo.toml
+++ b/lib-q-utils/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lib-q-utils"
 version = "0.0.1"
-edition = "2021"
+edition = "2024"
 authors = ["lib-Q Contributors"]
 description = "Utility functions for lib-Q post-quantum cryptography library"
 license = "Apache-2.0"
@@ -11,7 +11,7 @@ categories = ["cryptography"]
 readme = "README.md"
 
 [dependencies]
-lib-q-core = { path = "../lib-q-core" }
+lib-q-core = { path = "../lib-q-core", features = ["rand"] }
 getrandom = { version = "0.3.3", features = ["wasm_js"] }
 
 [features]
