--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,6 +64,7 @@ jobs:
     name: Publish Rust Crates
     needs: validate
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v5
       
@@ -84,67 +85,142 @@ jobs:
       - name: Publish lib-q-core to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-core --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-core --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-keccak to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-keccak --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-keccak --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-ascon to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-ascon --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-ascon --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-sha3 to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-sha3 --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-sha3 --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-k12 to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-k12 --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-k12 --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-kem to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-kem --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-kem --token $CARGO_REGISTRY_TOKEN
+      
+      - name: Publish lib-q-ml-kem to crates.io
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-ml-kem --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-sig to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-sig --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-sig --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-hash to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-hash --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-hash --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-aead to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-aead --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-aead --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-utils to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-utils --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-utils --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-zkp to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-zkp --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-zkp --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish lib-q-sponge to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q-sponge --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q-sponge --token $CARGO_REGISTRY_TOKEN
       
       - name: Publish main lib-q crate to crates.io
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: cargo publish -p lib-q --token $CARGO_REGISTRY_TOKEN
+        run: |
+          if [ -z "$CARGO_REGISTRY_TOKEN" ]; then
+            echo "Warning: CARGO_REGISTRY_TOKEN not set, skipping crate publication"
+            exit 0
+          fi
+          cargo publish -p lib-q --token $CARGO_REGISTRY_TOKEN
 
   # Build and publish WASM packages
   publish-wasm-packages:
@@ -185,7 +261,7 @@ jobs:
       - name: Build main lib-q WASM package
         run: |
           echo "Building main lib-q WASM package..."
-          wasm-pack build --target web --features "wasm,all-algorithms" --verbose
+          wasm-pack build --target web --features "wasm,all-algorithms,ml-kem" --verbose
           echo "Main lib-q WASM build completed successfully"
       
       - name: Prepare main NPM package
@@ -213,19 +289,63 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          if [ -z "$NODE_AUTH_TOKEN" ]; then
+            echo "Warning: NPM_TOKEN not set, skipping NPM publication"
+            exit 0
+          fi
           cd pkg
           npm publish --access public
       
       # Build individual crate WASM packages
+      - name: Build lib-q-ml-kem WASM package
+        run: |
+          echo "Building lib-q-ml-kem WASM package..."
+          cd lib-q-ml-kem
+          wasm-pack build --target web --features "wasm" --verbose
+          echo "lib-q-ml-kem WASM build completed successfully"
+      
+      - name: Prepare lib-q-ml-kem NPM package
+        run: |
+          cd lib-q-ml-kem/pkg
+          npm pkg set name="@lib-q/ml-kem"
+          VERSION=${GITHUB_REF#refs/tags/}
+          VERSION=${VERSION#v}  # Remove 'v' prefix if present
+          npm pkg set version=$VERSION
+          npm pkg set description="NIST ML-KEM (Module-Lattice-based Key Encapsulation Mechanism) for Node.js"
+          npm pkg set keywords="cryptography,post-quantum,ml-kem,key-encapsulation,nist,wasm"
+          npm pkg set author="lib-Q Contributors"
+          npm pkg set license="Apache-2.0"
+          npm pkg set repository.type="git"
+          npm pkg set repository.url="https://github.com/Enkom-Tech/libQ.git"
+          npm pkg set homepage="https://github.com/Enkom-Tech/libQ#readme"
+          npm pkg set bugs.url="https://github.com/Enkom-Tech/libQ/issues"
+          npm pkg set files=["*.js","*.d.ts","*.wasm"]
+          npm pkg set main="lib_q_ml_kem.js"
+          npm pkg set types="lib_q_ml_kem.d.ts"
+          npm pkg set exports.import="./lib_q_ml_kem.js"
+          npm pkg set exports.require="./lib_q_ml_kem.js"
+      
+      - name: Publish lib-q-ml-kem NPM package
+        env:
+           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+           if [ -z "$NODE_AUTH_TOKEN" ]; then
+             echo "Warning: NPM_TOKEN not set, skipping NPM publication"
+             exit 0
+           fi
+           cd lib-q-ml-kem/pkg
+           npm publish --access public
+      
       - name: Build lib-q-kem WASM package
         run: |
           echo "Building lib-q-kem WASM package..."
-          wasm-pack build lib-q-kem --target web --features "kyber" --out-dir pkg-kem --verbose
+          cd lib-q-kem
+          wasm-pack build --target web --features "wasm,ml-kem" --verbose
           echo "lib-q-kem WASM build completed successfully"
       
       - name: Prepare lib-q-kem NPM package
         run: |
-          cd pkg-kem
+          cd lib-q-kem/pkg
           npm pkg set name="@lib-q/kem"
           VERSION=${GITHUB_REF#refs/tags/}
           VERSION=${VERSION#v}  # Remove 'v' prefix if present
@@ -248,7 +368,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          cd pkg-kem
+          if [ -z "$NODE_AUTH_TOKEN" ]; then
+            echo "Warning: NPM_TOKEN not set, skipping NPM publication"
+            exit 0
+          fi
+          cd lib-q-kem/pkg
           npm publish --access public
       
       - name: Build lib-q-sig WASM package
@@ -282,6 +406,10 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          if [ -z "$NODE_AUTH_TOKEN" ]; then
+            echo "Warning: NPM_TOKEN not set, skipping NPM publication"
+            exit 0
+          fi
           cd pkg-sig
           npm publish --access public
       
@@ -316,6 +444,10 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          if [ -z "$NODE_AUTH_TOKEN" ]; then
+            echo "Warning: NPM_TOKEN not set, skipping NPM publication"
+            exit 0
+          fi
           cd pkg-hash
           npm publish --access public
       
@@ -350,6 +482,10 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
+          if [ -z "$NODE_AUTH_TOKEN" ]; then
+            echo "Warning: NPM_TOKEN not set, skipping NPM publication"
+            exit 0
+          fi
           cd pkg-utils
           npm publish --access public
 
