--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lib-q-examples"
 version = "0.0.1"
-edition = "2021"
+edition = "2024"
 authors = ["lib-Q Contributors"]
 description = "Examples for lib-Q post-quantum cryptography library"
 license = "Apache-2.0"
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 [dependencies]
 lib-q-hash = { path = "../lib-q-hash" }
 lib-q-core = { path = "../lib-q-core" }
+lib-q-kem = { path = "../lib-q-kem", features = ["ml-kem"] }
 
 [[example]]
 name = "hash_example"
