--- a/lib-q-core/Cargo.toml
+++ b/lib-q-core/Cargo.toml
@@ -1,35 +1,52 @@
 [package]
 name = "lib-q-core"
 version = "0.0.1"
-edition = "2021"
+edition = "2024"
 authors = ["lib-Q Contributors"]
 description = "Core types and traits for lib-Q post-quantum cryptography library"
 license = "Apache-2.0"
 repository = "https://github.com/Enkom-Tech/libQ"
-keywords = ["cryptography", "post-quantum", "security", "core"]
-categories = ["cryptography"]
+homepage = "https://github.com/Enkom-Tech/libQ"
+documentation = "https://docs.rs/lib-q-core"
+keywords = ["cryptography", "post-quantum", "security", "core", "nist"]
+categories = ["cryptography", "wasm"]
 readme = "README.md"
 
 [dependencies]
-# Core cryptographic dependencies
-getrandom = { version = "0.3.3", features = ["wasm_js"] }
-rand = "0.9.2"
-rand_core = "0.9.3"
+# Core cryptographic dependencies - no_std compatible
+getrandom = { version = "0.3.3", features = ["wasm_js"], optional = true }
+rand_core = { version = "0.9.3", default-features = false, features = ["os_rng"] }
+rand = { version = "0.9.2", default-features = false, features = ["thread_rng"], optional = true }
+
+# ML-KEM implementation
+lib-q-ml-kem = { path = "../lib-q-ml-kem", version = "0.0.1", optional = true, default-features = false }
 
 # Zeroize for secure memory clearing
-zeroize = { version = "1.8.1", features = ["derive"] }
+zeroize = { version = "1.8.1", features = ["derive"], default-features = false }
 
 # Serde for serialization (optional)
-serde = { version = "1.0.219", optional = true, features = ["derive"] }
+serde = { version = "1.0.219", optional = true, features = ["derive"], default-features = false }
+
+# WASM bindings
+wasm-bindgen = { version = "0.2.100", optional = true, features = ["serde-serialize"] }
+js-sys = { version = "0.3.77", optional = true }
 
 [features]
 default = ["std"]
-std = []
+std = ["getrandom", "alloc", "rand"]
 alloc = []
-no_std = []
+no_std = ["getrandom"]
+getrandom = ["dep:getrandom"]
+rand = ["dep:rand"]
+
+# ML-KEM support
+ml-kem = ["dep:lib-q-ml-kem"]
 
 # Serialization features
 serde = ["dep:serde"]
+
+# WASM support
+wasm = ["wasm-bindgen", "js-sys", "serde"]
 
 [lib]
 name = "lib_q_core"
