--- a/lib-q-kem/Cargo.toml
+++ b/lib-q-kem/Cargo.toml
@@ -1,28 +1,61 @@
 [package]
 name = "lib-q-kem"
 version = "0.0.1"
-edition = "2021"
+edition = "2024"
 authors = ["lib-Q Contributors"]
 description = "Post-quantum Key Encapsulation Mechanisms for lib-Q"
 license = "Apache-2.0"
 repository = "https://github.com/Enkom-Tech/libQ"
-keywords = ["cryptography", "post-quantum", "kem", "key-encapsulation"]
-categories = ["cryptography"]
+homepage = "https://github.com/Enkom-Tech/libQ"
+documentation = "https://docs.rs/lib-q-kem"
+keywords = ["cryptography", "post-quantum", "kem", "ml-kem", "nist"]
+categories = ["cryptography", "wasm"]
 readme = "README.md"
 
 [dependencies]
-lib-q-core = { path = "../lib-q-core" }
+lib-q-core = { path = "../lib-q-core", version = "0.0.1" }
+
+# RustCrypto ML-KEM implementation (FIPS 203 standard)
+lib-q-ml-kem = { path = "../lib-q-ml-kem", version = "0.0.1", optional = true, default-features = false }
+
+# Rand dependencies for the ml-kem feature
+rand = { version = "0.9.2", optional = true }
+rand_core = { version = "0.9.3", optional = true }
+
+# WASM bindings
+wasm-bindgen = { version = "0.2", optional = true }
+
+[dev-dependencies]
+rand = "0.9.2"
 
 [features]
 default = []
-kyber = []
+# Enable ml-kem (FIPS 203 standard) with modern dependencies
+ml-kem = [
+	"dep:lib-q-ml-kem",
+	"rand",
+	"rand_core",
+	"lib-q-core/std",
+]
+
+# Enable WASM support
+wasm = [
+	"wasm-bindgen",
+	"ml-kem",
+	"lib-q-core/wasm",
+]
+
 mceliece = []
 hqc = []
 
 [lib]
 name = "lib_q_kem"
 path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]
 
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
