Implement algorithm registry in lib-Q, centralizing algorithm management and enhancing maintainability. Refactor supported algorithms retrieval to utilize the new registry. Introduce security validation utilities for consistent security checks across the codebase. Update Cargo.toml and Cargo.lock for new dependencies, including lazy_static. Add CI workflows for improved build processes and testing.

--- a/lib-q-core/Cargo.toml
+++ b/lib-q-core/Cargo.toml
@@ -31,6 +31,9 @@ serde = { version = "1.0.219", optional = true, features = ["derive"], default-f
 wasm-bindgen = { version = "0.2.100", optional = true, features = ["serde-serialize"] }
 js-sys = { version = "0.3.77", optional = true }
 
+# Lazy static for global registry
+lazy_static = "1.5.0"
+
 [features]
 default = ["std"]
 std = ["getrandom", "alloc", "rand"]
